# Minimal-Android-Native-Activity-Sample

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jlwuwill/nativeactivity/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp  native-lib.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/jlwuwill/nativeactivity/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
